kubernetes/default/jellyfin/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: bhamm-lab-tls
